# wsproxy

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.ci  README.md
.github/workflows/: ci.yml  docker.yml
docs/: docker.md  systemd.md  upstart.md
src/: client.rs  config.rs  daemon.rs  error.rs  lib.rs  main.rs  port_registry.rs  router.rs  server.rs
src/daemon/: mod.rs  registry.rs
tests/: integration.rs
