[package]
name = "wsproxy"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "WebSocket proxy for TCP connections"
readme = "README.md"
homepage = "https://github.com/jprendes/wsproxy"
repository = "https://github.com/jprendes/wsproxy"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
matchit = "0.8"
notify = "8"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake"] }
toml = "0.8"
webpki-roots = "0.26"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wsproxy"
path = "src/main.rs"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
